--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #2e7d32;
+    background-color: #862834;
     color: white;
     padding: 1.5em 1em;
     text-align: center;
@@ -38,7 +38,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #1b5e20;
+    background-color: #50161e;
     border-radius: 5px;
 }
 
@@ -56,9 +56,19 @@ section {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
+.responsive-img {
+    width: 100%;
+    max-width: 700px;
+    height: auto;
+    display: block;
+    margin: 1.5em auto;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 section h2 {
     margin-bottom: 1em;
-    color: #1b5e20;
+    color: #8b3b3b;
     font-size: 1.5rem;
 }
 
@@ -73,10 +83,10 @@ li {
 
 .cta {
     background-color: #e8f5e9;
-    border-left: 6px solid #2e7d32;
+    border-left: 6px solid #9e0a16;
 }
 
 .cta p {
     font-weight: 500;
-    color: #2e7d32;
+    color: #9e0a16;
 }
