--- a/farming.css
+++ b/farming.css
@@ -1,4 +1,58 @@
+body{
+    background-color: azure;
+}
+
+header {
+    background-color: #2e7d32;
+    color: white;
+    padding: 1.5em 1em;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+header h1 {
+    margin-bottom: 10px;
+    font-size: 2rem;
+}
+nav {
+    margin-top: 10px;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-weight: bold;
+    padding: 6px 10px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+nav a:hover {
+    background-color: #1b5e20;
+    border-radius: 5px;
+}
+/* .farming-main {
+    background-color: rgb(148, 194, 146);
+    margin: none;
+} */
+
 .farming-header {
     text-decoration: underline;
     color: brown;
+}
+
+.farming-cow {
+    border-radius: 3rem;
+}
+
+.farming-list-container{
+    background-color: rgb(155, 158, 158);
+    border-radius: 1rem;
+    font-size: 24px;
+}
+
+.farming-items {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
