--- a/farming.css
+++ b/farming.css
@@ -1,5 +1,7 @@
 body{
+    margin: 0;
     background-color: azure;
+    
 }
 
 header {
@@ -43,16 +45,36 @@ nav a:hover {
 
 .farming-cow {
     border-radius: 3rem;
+    height: 300px;
 }
 
-.farming-list-container{
-    background-color: rgb(155, 158, 158);
+.farming-how-container{
+    background-color: rgb(141, 184, 130);
     border-radius: 1rem;
-    font-size: 24px;
+    padding: 2px;
+
 }
 
 .farming-items {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-size: 24px;
+
+    
+}
+
+.farming-midigate-container {
+    background-color: rgb(196, 214, 198);
+    border-radius: 1rem;
+    padding: 2px;
+    margin-top: 2rem;
+}
+
+.farming-midigate-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 24px;
+    
 }
